--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass-chokidar": "^1.2.2",
+    "node-sass-chokidar": "^1.3.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.5",
     "styled-components": "^3.2.6"
   },
   "scripts": {
