--- a/package.json
+++ b/package.json
@@ -3,23 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass-chokidar": "^1.3.3",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "node-sass": "^4.11.0",
+    "node-sass-chokidar": "^1.3.4",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-scripts": "^2.1.3",
     "styled-components": "^3.4.10"
   },
+  "homepage": "http://IronyOfRyan.github.io/reacttactoe",
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1"
+    "babel-eslint": "^8.2.6",
+    "eslint": "^4.19.1",
+    "gh-pages": "^2.0.1"
   },
   "browserslist": [
     ">0.2%",
