--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-scripts": "^2.1.3",
     "styled-components": "^3.4.10"
   },
-  "homepage": "http://IronyOfRyan.github.io/reacttactoe",
+  "homepage": "https://ironyofryan.github.io/reacttactoe",
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
