--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^4.11.0",
-    "node-sass-chokidar": "^1.3.4",
+    "chokidar": "^3.4.3",
+    "node-sass": "^4.14.1",
+    "node-sass-chokidar": "^1.5.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^2.1.3",
-    "styled-components": "^3.4.10"
+    "styled-components": "^3.4.10",
+    "tar": "^2.2.2"
   },
   "homepage": "https://universallyry.github.io/reacttactoe/",
   "scripts": {
