--- a/package.json
+++ b/package.json
@@ -1,37 +1,53 @@
 {
   "name": "tictactoe",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "private": true,
   "dependencies": {
-    "chokidar": "^3.4.3",
-    "node-sass": "^4.14.1",
-    "node-sass-chokidar": "^1.5.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "^2.1.3",
-    "styled-components": "^3.4.10",
-    "tar": "^2.2.2"
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "chokidar": "3.4.3",
+    "jshint": "^2.12.0",
+    "node-sass": "5.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.0",
+    "styled-components": "5.2.1",
+    "web-vitals": "^0.2.4"
   },
   "homepage": "https://universallyry.github.io/reacttactoe/",
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "eslint": "^4.19.1",
-    "gh-pages": "^2.0.1"
+    "babel-eslint": "^10.1.0",
+    "eslint": "7.14.0",
+    "gh-pages": "3.1.0"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not ie <= 11",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
