--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "7.21.0",
+    "eslint": "^7.21.0",
     "gh-pages": "3.1.0"
   },
   "eslintConfig": {
