--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.6.1",
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
     "chokidar": "3.5.1",
     "jshint": "^2.12.0",
     "node-sass": "5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^1.1.5",
     "styled-components": "5.2.1",
+    "typescript": "^4.3.2",
     "web-vitals": "^1.1.0"
   },
   "homepage": "https://universallyry.github.io/reacttactoe/",
