--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/styled-components": "^5.1.9",
     "chokidar": "3.5.1",
-    "jshint": "^2.12.0",
-    "node-sass": "5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "^1.1.5",
-    "styled-components": "5.2.1",
+    "jshint": "^2.13.0",
+    "node-sass": "6.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "styled-components": "5.3.0",
     "typescript": "^4.3.2",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.2"
   },
   "homepage": "https://universallyry.github.io/reacttactoe/",
   "scripts": {
@@ -33,7 +34,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "gh-pages": "3.1.0"
+    "gh-pages": "^3.2.0"
   },
   "eslintConfig": {
     "extends": [
