--- a/package.json
+++ b/package.json
@@ -2,7 +2,22 @@
   "name": "tictactoe",
   "version": "0.1.5",
   "private": true,
+  "homepage": "https://universallyry.github.io/reacttactoe/",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "5.3.0"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.14.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -11,30 +26,11 @@
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "@types/styled-components": "^5.1.9",
-    "chokidar": "3.5.1",
+    "gh-pages": "^3.2.3",
     "jshint": "^2.13.0",
-    "node-sass": "6.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
-    "styled-components": "5.3.0",
+    "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
-  },
-  "homepage": "https://universallyry.github.io/reacttactoe/",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "gh-pages": "^3.2.3"
   },
   "eslintConfig": {
     "extends": [
