--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -17,7 +18,6 @@
     "styled-components": "5.3.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -29,6 +29,7 @@
     "gh-pages": "^3.2.3",
     "jshint": "^2.13.0",
     "react-scripts": "4.0.3",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
