--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^17.0.5",
     "@types/styled-components": "^5.1.9",
     "gh-pages": "^3.2.3",
+    "jest-styled-components": "^7.0.4",
     "jshint": "^2.13.0",
     "react-scripts": "4.0.3",
     "ts-jest": "^27.0.3",
