--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "jest": "27.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-is": "16.8.0",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
@@ -29,7 +32,7 @@
     "jest-styled-components": "^7.0.4",
     "jshint": "^2.13.0",
     "react-scripts": "4.0.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "27.0.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
