--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     ]
   },
   "keywords": [],
-  "description": "Tic Tac Toe app made with react."
+  "description": "Tic Tac Toe app made with React and ChakraUI."
 }
